fixed contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@ body {
 
 header {
     text-align: center;
-    background-color: blue;
+    background-color: #166bdb;
     color: white;
     padding: 20px;
 }
@@ -53,13 +53,13 @@ main {
 }
 
 .card {
-    background-color: blue;
+    background-color: #166bdb;
     padding: 20px;
     margin-bottom: 20px;
 }
 
 footer {
-    background-color: blue;
+    background-color: #166bdb;
     color: #fff;
     text-align: center;
     padding: 10px;
